build: upgrade Spring Boot to version 4 with OpenRewrite (#174)
* build: upgrade Spring Boot to version 4 with OpenRewrite

* fix: correct variable name in FreeTextAnswer handling

* fix: rename variable